--- a/BasicApi/BasicApi.Application.csproj
+++ b/BasicApi/BasicApi.Application.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BasicApi.DataBase\BasicApi.DataBase.csproj" />
+  </ItemGroup>
+
 </Project>
